[gd_scene load_steps=2 format=3 uid="uid://dw1whjy7jt0jg"]

[ext_resource type="Script" uid="uid://b0g6px66rwohg" path="res://script/result.gd" id="1_result"]

[node name="result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_result")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Total Score: 85.7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
columns = 2

[node name="Target1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Target1Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A-Zone Target"

[node name="Target1Image" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target1/Target1Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Target1Stats" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target1"]
layout_mode = 2
text = "0.8s | 15.2s"
horizontal_alignment = 1

[node name="Target2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Target2Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "C-Zone Target"

[node name="Target2Image" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target2/Target2Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Target2Stats" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target2"]
layout_mode = 2
text = "1.2s | 18.7s"
horizontal_alignment = 1

[node name="Target3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Target3Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "D-Zone Target"

[node name="Target3Image" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target3/Target3Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Target3Stats" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target3"]
layout_mode = 2
text = "0.9s | 22.1s"
horizontal_alignment = 1

[node name="Target4" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Target4Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Steel Target"

[node name="Target4Image" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target4/Target4Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Target4Stats" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target4"]
layout_mode = 2
text = "0.6s | 12.9s"
horizontal_alignment = 1

[node name="Target5" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Target5Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Popper Target"

[node name="Target5Image" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target5/Target5Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Target5Stats" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target5"]
layout_mode = 2
text = "1.1s | 16.4s"
horizontal_alignment = 1

[node name="Target6" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Target6Button" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Paper Target"

[node name="Target6Image" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target6/Target6Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Target6Stats" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target6"]
layout_mode = 2
text = "0.7s | 19.8s"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="ModalBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="ModalContainer" type="CenterContainer" parent="ModalBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModalPanel" type="Panel" parent="ModalBackground/ModalContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ModalContent" type="VBoxContainer" parent="ModalBackground/ModalContainer/ModalPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModalTitle" type="Label" parent="ModalBackground/ModalContainer/ModalPanel/ModalContent"]
layout_mode = 2
text = "Target Details"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ModalBackground/ModalContainer/ModalPanel/ModalContent"]
layout_mode = 2

[node name="ModalText" type="Label" parent="ModalBackground/ModalContainer/ModalPanel/ModalContent"]
layout_mode = 2
size_flags_vertical = 3
text = "Detailed statistics and information about this target will be displayed here."
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="ModalBackground/ModalContainer/ModalPanel/ModalContent"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target1/Target1Button" to="." method="_on_target_button_pressed" binds= ["Target1"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target2/Target2Button" to="." method="_on_target_button_pressed" binds= ["Target2"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target3/Target3Button" to="." method="_on_target_button_pressed" binds= ["Target3"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target4/Target4Button" to="." method="_on_target_button_pressed" binds= ["Target4"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target5/Target5Button" to="." method="_on_target_button_pressed" binds= ["Target5"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/GridContainer/Target6/Target6Button" to="." method="_on_target_button_pressed" binds= ["Target6"]]
[connection signal="pressed" from="ModalBackground/ModalContainer/ModalPanel/ModalContent/CloseButton" to="." method="_on_close_button_pressed"]
